# GameEnginev2

./: .gitignore  CMakeLists.txt
src/: core.c  core.h  graphics.c  graphics.h  maths.c  maths.h  test.c
src/public/: core.h  graphics.h  maths.h
